k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: requestbin

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: requestbin
spec:
  selector:
    app: redis
  ports:
  - port: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: requestbin
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:4.0@sha256:c389a35832492c42f4719776471f9a42d2fc5a8ba0077ba25746626b09eab880
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: requestbin
  namespace: requestbin
spec:
  type: NodePort
  selector:
    app: requestbin
  ports:
  - port: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestbin
  namespace: requestbin
  labels:
    app: requestbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requestbin
  template:
    metadata:
      labels:
        app: requestbin
    spec:
      containers:
      - name: requestbin
        image: '819234847174.dkr.ecr.us-east-1.amazonaws.com/requestbin:latest'
        ports:
          - containerPort: 8000
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: dns
    certmanager.k8s.io/cluster-issuer: letsencrypt-production-dns
    external-dns.alpha.kubernetes.io/hostname: requestbin.communitysift.com
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/managed-by: spinnaker
    app.kubernetes.io/name: requestbin
  name: requestbin
  namespace: requestbin
spec:
  rules:
    - host: requestbin.communitysift.com
      http:
        paths:
          - backend:
              serviceName: requestbin
              servicePort: 8000
            path: /
  tls:
    - hosts:
        - requestbin.communitysift.com
      secretName: requestbin-communitysift-com
